--- a/计算机组成原理/第二章 数据的表示和运算/2.2 运算方法和运算电路.md
+++ b/计算机组成原理/第二章 数据的表示和运算/2.2 运算方法和运算电路.md
@@ -112,7 +112,7 @@
 
 ## 定点数的加减运算
 
-### 原码的加减运算
+ ### 原码的加减运算
 
 ![](images/{0D8397ED-5991-48F6-94EF-C5710D188AD5}.png)
 
@@ -166,3 +166,54 @@
 ![](images/{F63ED939-A433-44BE-A12F-C9D1852EB46A}.png)
 
 ![](images/{5D6A614D-66CC-4F1F-BB36-CCCE1EA8F53F}.png)
+
+### 补码的乘法运算
+
+![](images/Pasted%20image%2020241205074635.png)
+
+![](images/Pasted%20image%2020241205074743.png)
+
+![](images/Pasted%20image%2020241205074916.png)
+
+![](images/Pasted%20image%2020241205075023.png)
+
+### 原码的除法运算
+
+![](images/Pasted%20image%2020241205075117.png)
+
+![](images/Pasted%20image%2020241205075303.png)
+
+![](images/Pasted%20image%2020241205075457.png)
+
+![](images/Pasted%20image%2020241205080017.png)
+
+![](images/Pasted%20image%2020241205080138.png)
+
+![](images/Pasted%20image%2020241205080239.png)
+
+![](images/Pasted%20image%2020241205080346.png)
+
+![](images/Pasted%20image%2020241205080435.png)
+
+### 补码的除法运算
+
+![](images/Pasted%20image%2020241205080731.png)
+
+![](images/Pasted%20image%2020241205080810.png)
+
+## 零扩展、符号扩展
+
+![](images/Pasted%20image%2020241205081122.png)
+
+![](images/Pasted%20image%2020241205081300.png)
+
+## C语言中的整数类型及类型转换
+
+![](images/Pasted%20image%2020241205081541.png)
+
+## 数据的存储和排列
+
+![](images/Pasted%20image%2020241205081754.png)
+
+![](images/Pasted%20image%2020241205082027.png)
+
