--- a/计算机组成原理/第二章 数据的表示和运算/2.3 浮点数的表示与运算.md
+++ b/计算机组成原理/第二章 数据的表示和运算/2.3 浮点数的表示与运算.md
@@ -27,3 +27,20 @@
 
 ![](images/Pasted%20image%2020241205084957.png)
 
+![](images/Pasted%20image%2020241205085250.png)
+
+![](images/Pasted%20image%2020241205085620.png)
+
+![](images/Pasted%20image%2020241205085755.png)
+
+## 浮点数的加减运算
+
+![](images/Pasted%20image%2020241205091207.png)
+ ![](images/Pasted%20image%2020241205091824.png)
+
+![](images/Pasted%20image%2020241205092102.png)
+
+![](images/Pasted%20image%2020241205092353.png)
+
+![](images/Pasted%20image%2020241205092504.png)
+
